application-ingress2/ingress-test-pod-service.yaml

# kubectl apply -f ingress-test-pod-service.yaml
# kubectl get service/ingress-test-service
## curl <Service Cluster IPv4 address>

apiVersion: v1
kind: Service
metadata:
  name: ingress-test-service
spec:
  type: ClusterIP
  selector:
    app: ingress-test
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: ingress-test-pod
  labels:
    app: ingress-test
spec:
  containers:
    - name: nginx
      image: nginx:stable
      ports:
      - containerPort: 80
